--- a/main.html
+++ b/main.html
@@ -8,19 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src="" alt="your image">
-	<h1>Your full name</h1>
-	<p>LinkedIn: <a src="" alt="Lindked in link">Your linkedIn name</p>
-	<section id="skills">
-		<h2>Skills</h2>
+	<img src="your_image_path.jpg" alt="Your Name"> 
+    <h1>Your Name</h1>
+
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/your-linkedin-profile-url">Your Name on LinkedIn</a></p>
+
+    <section id="skills">
+        <h2>Skills</h2>
         <ul>
             <li>Skill 1</li>
             <li>Skill 2</li>
             <li>Skill 3</li>
             <li>Skill 4</li>
         </ul>
-	</section>
-	<section id="projects">
+    </section>
+
+    <section id="projects">
         <h2>Projects</h2>
         <ul>
             <li>Project 1</li>
